--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 <body>
     <main>
         <div class="top-bar">
-            <p id=highscores>View Highscores</p>
+            <p id=highscores href="#">View Highscores</p>
             <p id="time-left"></p>
         </div>
 
-        <div class="title">
-            <h1>JavaScript Quiz</h1>
-            <p>The following quiz is about JavaScript. Remeber that any wrong answers will dock your time by 10 seconds. Click the button below to start</p>
-            <button id="start-quiz" class="btn-start">Start Quiz</button>
+        <div class="titleOfQuiz">
+            <h1 class="title">JavaScript Quiz</h1>
+            <p class="descro">The following quiz is about JavaScript. Remeber that any wrong answers will dock your time by 10 seconds. Click the button below to start</p>
+            <ul id="answer"></ul>
+            <button id="start-quiz" class="btn">Start Quiz</button>
         </div>
     </main>
 </body>
